add data preprocessing

--- a/notebooks/tanya/test_get_datasets.ipynb
+++ b/notebooks/tanya/test_get_datasets.ipynb
@@ -46,17 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "914e4b2f-9bdb-4ec4-8849-0f3e163a7eca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_nam"
+    "ds_names = DATASETS_RESNET"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "id": "9f9bfe54-685b-400b-a1c1-b66d1b36e656",
    "metadata": {},
    "outputs": [
@@ -64,17 +64,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Len all datasets MCDCNN 3\n"
+      "Len all datasets filtered 18\n"
      ]
     }
    ],
    "source": [
-    "print(\"Len all datasets MCDCNN\", len(DATASETS_MCDCNN))"
+    "print(\"Len all datasets filtered\", len(ds_names))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "id": "51af1c90-2ce4-48a1-833c-8aa5a83fedbb",
    "metadata": {},
    "outputs": [
@@ -82,17 +82,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Len all datasets MCDCNN 3\n"
+      "Len all datasets filtered 18\n"
      ]
     }
    ],
    "source": [
-    "print(\"Len all datasets MCDCNN\", len(get_all_datasets_test_train_np_arrays(path_to_datasets, ds_names=DATASETS_MCDCNN)))"
+    "print(\"Len all datasets filtered\", len(get_all_datasets_test_train_np_arrays(path_to_datasets, ds_names=ds_names)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "214125b9-e964-42ca-b729-1240004b15a1",
    "metadata": {},
    "outputs": [
@@ -100,17 +100,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Len all datasets MCDCNN 3\n"
+      "Len all datasets filtered 18\n"
      ]
     }
    ],
    "source": [
-    "print(\"Len all datasets MCDCNN\", len(get_all_datasets_info(path_to_datasets, ds_names=DATASETS_MCDCNN)))"
+    "print(\"Len all datasets filtered\", len(get_all_datasets_info(path_to_datasets, ds_names=ds_names)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "id": "7fe707ab-2f95-4dfe-81c4-b447d6b8c075",
    "metadata": {},
    "outputs": [
@@ -118,34 +118,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Len all datasets MCDCNN 3\n"
+      "Len all datasets filtered 18\n"
      ]
     }
    ],
    "source": [
-    "print(\"Len all datasets MCDCNN\", len(get_all_datasets_names_paths(path_to_datasets, ds_names=DATASETS_MCDCNN)[0]))"
+    "print(\"Len all datasets filtered\", len(get_all_datasets_names_paths(path_to_datasets, ds_names=ds_names)[0]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f9bf90eb-c542-409f-b202-8597e6e78be7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['electric_devices', 'freezers', 'sony_robot'],\n",
-       " ['../../datasets/electric_devices',\n",
-       "  '../../datasets/freezers',\n",
-       "  '../../datasets/sony_robot'])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
