added weighted ensembles and augmented results

--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -10,6 +10,9 @@
    "source": [
     "import logging\n",
     "import os\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '3'\n",
     "logging.getLogger().setLevel(logging.ERROR)\n",
     "import tensorflow as tf\n",
@@ -18,7 +21,9 @@
     "import sys\n",
     "sys.path.append(\"../src\")\n",
     "\n",
-    "from Evaluation import run_ensembles\n",
+    "from toolz import keyfilter\n",
+    "\n",
+    "from Evaluation import run_ensembles, load_models\n",
     "from LoadData import CurrentDatasets\n",
     "from Helpers import create_confusion_matrix_plot_from_csv"
    ]
@@ -30,8 +35,13 @@
    "source": [
     "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
     "\n",
-    "ensembles = {\"ALL\": [\"Encoder\", \"FCN\", \"MCDCNN\", \"MLP\", \"Resnet\", \"Time_CNN\"],\n",
-    "             \"BEST3\": [\"Encoder\", \"Resnet\", \"MLP\"]}\n",
+    "# in a nested list all elements on the same level get equal weights\n",
+    "# eg [foo, [bar, bar, bar, [baz, baz]]] is weighted [1/2, [1/8, 1/8, 1/8, [1/16, 1/16]]]\n",
+    "\n",
+    "ensembles = {\"All\": [\"Encoder\", \"FCN\", \"MCDCNN\", \"MLP\", \"Resnet\", \"Time_CNN\"],\n",
+    "             \"Best3\": [\"Encoder\", \"Resnet\", \"MLP\"],\n",
+    "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
+    "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)], \"FCN\", \"Encoder\"]}\n",
     "csv_name = '../results/test_Ensembles.csv'"
    ],
    "metadata": {
@@ -41,242 +51,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/11:\tcricket_y\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13/13 [==============================] - 2s 7ms/step\n",
-      "13/13 [==============================] - 0s 4ms/step\n",
-      "13/13 [==============================] - 0s 3ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 9ms/step\n",
-      "13/13 [==============================] - 0s 2ms/step\n",
-      "13/13 [==============================] - 0s 4ms/step\n",
-      "13/13 [==============================] - 0s 2ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 5ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 4ms/step\n",
-      "13/13 [==============================] - 0s 2ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 995us/step\n",
-      "13/13 [==============================] - 0s 4ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13/13 [==============================] - 0s 5ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 6ms/step\n",
-      "13/13 [==============================] - 0s 6ms/step\n",
-      "13/13 [==============================] - 0s 1ms/step\n",
-      "13/13 [==============================] - 0s 4ms/step\n",
-      "13/13 [==============================] - 0s 5ms/step\n",
-      "13/13 [==============================] - 0s 987us/step\n",
-      "13/13 [==============================] - 0s 5ms/step\n",
-      "2/11:\tdistal_phalanax_tw\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5/5 [==============================] - 0s 47ms/step\n",
-      "5/5 [==============================] - 0s 46ms/step\n",
-      "5/5 [==============================] - 0s 5ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 1s 66ms/step\n",
-      "5/5 [==============================] - 0s 5ms/step\n",
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 2ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 2ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 2ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 4ms/step\n",
-      "5/5 [==============================] - 0s 3ms/step\n",
-      "5/5 [==============================] - 0s 1ms/step\n",
-      "5/5 [==============================] - 0s 4ms/step\n",
-      "3/11:\tegg_five_days\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 1s 691ms/step\n",
-      "1/1 [==============================] - 0s 111ms/step\n",
-      "1/1 [==============================] - 0s 60ms/step\n",
-      "1/1 [==============================] - 0s 32ms/step\n",
-      "1/1 [==============================] - 1s 595ms/step\n",
-      "1/1 [==============================] - 0s 58ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 14ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 132ms/step\n",
-      "1/1 [==============================] - 0s 35ms/step\n",
-      "1/1 [==============================] - 0s 169ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 15ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "4/11:\telectric_devices\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "241/241 [==============================] - 1s 4ms/step\n",
-      "241/241 [==============================] - 1s 2ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 0s 926us/step\n",
-      "241/241 [==============================] - 1s 4ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 1s 3ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 1s 3ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 1s 3ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n",
-      "241/241 [==============================] - 0s 959us/step\n",
-      "241/241 [==============================] - 1s 3ms/step\n",
-      "241/241 [==============================] - 0s 1ms/step\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
-      "  function = cls._parse_function_from_config(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "241/241 [==============================] - 1s 4ms/step\n",
-      "241/241 [==============================] - 0s 915us/step\n",
-      "241/241 [==============================] - 1s 3ms/step\n",
-      "241/241 [==============================] - 1s 3ms/step\n",
-      "  1/241 [..............................] - ETA: 2s"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "run_ensembles(dataset_names=dataset_names, ensembles=ensembles, verbose=True).to_csv(csv_name)"
+    "used_ensembles=ensembles #keyfilter(lambda ensemble: ensemble in [\"Resnet10\"], ensembles)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "run_ensembles(dataset_names=dataset_names, ensembles=used_ensembles, verbose=True).to_csv(csv_name)"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -287,10 +78,7 @@
     "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
+    "collapsed": false
    }
   }
  ],
