--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -26,6 +29,12 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
+   },
    "outputs": [],
    "source": [
     "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
@@ -33,14 +42,20 @@
     "ensembles = {\"ALL\": [\"Encoder\", \"FCN\", \"MCDCNN\", \"MLP\", \"Resnet\", \"Time_CNN\"],\n",
     "             \"BEST3\": [\"Encoder\", \"Resnet\", \"MLP\"]}\n",
     "csv_name = '../results/test_Ensembles.csv'"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -271,48 +286,45 @@
    ],
    "source": [
     "run_ensembles(dataset_names=dataset_names, ensembles=ensembles, verbose=True).to_csv(csv_name)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
-   ],
    "metadata": {
     "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
     "pycharm": {
      "is_executing": true
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
