--- a/notebooks/EnsembleEvaluation.ipynb
+++ b/notebooks/EnsembleEvaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "dataset_names = [dataset.value for dataset in CurrentDatasets]\n",
@@ -38,11 +38,22 @@
     "# in a nested list all elements on the same level get equal weights\n",
     "# eg [foo, [bar, bar, bar, [baz, baz]]] is weighted [1/2, [1/8, 1/8, 1/8, [1/16, 1/16]]]\n",
     "\n",
-    "ensembles = {\"All\": [\"Encoder\", \"FCN\", \"MCDCNN\", \"MLP\", \"Resnet\", \"Time_CNN\"],\n",
-    "             \"Best3\": [\"Encoder\", \"Resnet\", \"MLP\"],\n",
+    "ensembles = {\"All\": [[f\"MLP-{number}\" for number in range(0,10)],\n",
+    "                     #[f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     #[f\"MCDCNN-{number}\" for number in range(0,10)],\n",
+    "                     #[f\"Time-CNN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Encoder-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Resnet-{number}\" for number in range(0,10)]],\n",
+    "             \"MLP10\": [f\"MLP-{number}\" for number in range(0,10)],\n",
+    "             #\"FCN10\": [f\"FCN-{number}\" for number in range(0,10)],\n",
+    "             #\"MCDCNN10\": [f\"MCDCNN-{number}\" for number in range(0,10)],\n",
+    "             #\"Time-CNN10\": [f\"Time-CNN-{number}\" for number in range(0,10)],\n",
+    "             \"Encoder10\": [f\"Encoder-{number}\" for number in range(0,10)],\n",
     "             \"Resnet10\": [f\"Resnet-{number}\" for number in range(0,10)],\n",
-    "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)], \"FCN\", \"Encoder\"]}\n",
-    "csv_name = '../results/test_Ensembles.csv'"
+    "             \"NNE\": [[f\"Resnet-{number}\" for number in range(0,10)],\n",
+    "                     #[f\"FCN-{number}\" for number in range(0,10)],\n",
+    "                     [f\"Encoder-{number}\" for number in range(0,10)]]}\n",
+    "csv_name = '../results/test_NNE.csv'"
    ],
    "metadata": {
     "collapsed": false
@@ -50,10 +61,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 27,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'NNE': [['Resnet-0',\n   'Resnet-1',\n   'Resnet-2',\n   'Resnet-3',\n   'Resnet-4',\n   'Resnet-5',\n   'Resnet-6',\n   'Resnet-7',\n   'Resnet-8',\n   'Resnet-9'],\n  ['Encoder-0',\n   'Encoder-1',\n   'Encoder-2',\n   'Encoder-3',\n   'Encoder-4',\n   'Encoder-5',\n   'Encoder-6',\n   'Encoder-7',\n   'Encoder-8',\n   'Encoder-9']]}"
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "used_ensembles=ensembles #keyfilter(lambda ensemble: ensemble in [\"Resnet10\"], ensembles)"
+    "used_ensembles=ensembles\n",
+    "used_ensembles=keyfilter(lambda ensemble: ensemble in [\"NNE\"], ensembles)\n",
+    "used_ensembles"
    ],
    "metadata": {
     "collapsed": false
@@ -62,12 +84,203 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/11:\tcricket_y\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2/11:\tdistal_phalanax_tw\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3/11:\tegg_five_days\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4/11:\telectric_devices\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5/11:\tface_ucr\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6/11:\tfifty_words\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7/11:\tmote_strain\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8/11:\tpower_cons\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9/11:\tsony_robot\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10/11:\tswedish_leaf\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11/11:\tsynthetic_control\n",
+      "('Resnet-0', 'Resnet-1', 'Resnet-2', 'Resnet-3', 'Resnet-4', 'Resnet-5', 'Resnet-6', 'Resnet-7', 'Resnet-8', 'Resnet-9', 'Encoder-0', 'Encoder-1', 'Encoder-2', 'Encoder-3', 'Encoder-4', 'Encoder-5', 'Encoder-6', 'Encoder-7', 'Encoder-8', 'Encoder-9')\n",
+      "(0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05, 0.05)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/felix/miniconda3/envs/tf/lib/python3.10/site-packages/keras/layers/core/lambda_layer.py:324: UserWarning: ModelBuilder is not loaded, but a Lambda layer uses it. It may cause errors.\n",
+      "  function = cls._parse_function_from_config(\n"
+     ]
+    }
+   ],
    "source": [
     "run_ensembles(dataset_names=dataset_names, ensembles=used_ensembles, verbose=True).to_csv(csv_name)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   },
   {
@@ -77,6 +290,47 @@
    "source": [
     "create_confusion_matrix_plot_from_csv(csv_name, verbose=True)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cricket_y\n",
+      "distal_phalanax_tw\n",
+      "egg_five_days\n",
+      "electric_devices\n",
+      "face_ucr\n",
+      "fifty_words\n",
+      "mote_strain\n",
+      "power_cons\n",
+      "sony_robot\n",
+      "swedish_leaf\n",
+      "synthetic_control\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_confusion_matrix_plot_from_csv(\"../results/train__Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_Encoder_11_datasets.csv\", verbose=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
